--- a/src/app/spaten350/spaten350.component.html
+++ b/src/app/spaten350/spaten350.component.html
@@ -1,5 +1,5 @@
 <body>
-    <div class="container">
+    <div class="container2">
         <div class="divimg">
             <img srcset="/assets/img/cerv/spaten350.webp">
         </div>
