--- a/src/app/spaten350/spaten350.component.css
+++ b/src/app/spaten350/spaten350.component.css
@@ -49,11 +49,11 @@ button {
 
 @media screen and (max-width: 768px) {
  
-    .container {
+    .container2 {
         display: flex;
         align-items: center;
         width: 400px;
-        height: 950px;
+        height: 700px;
         margin: 0 auto;
         flex-direction: column;
     }
@@ -66,7 +66,8 @@ button {
     }
 
     .divimg {
-        width: 400px;    
+        width: 200px;
+        height: 200px;    
     }
 
     img {
