--- a/src/app/spaten269/spaten269.component.html
+++ b/src/app/spaten269/spaten269.component.html
@@ -1,5 +1,5 @@
 <body>
-    <div class="container2">
+    <div id="section"s class="container2">
         <div class="divimg">
             <img srcset="/assets/img/cerv/spaten269.webp">
         </div>
