--- a/src/app/spaten350/spaten350.component.html
+++ b/src/app/spaten350/spaten350.component.html
@@ -1,5 +1,4 @@
-<body>
-    <div class="container2">
+    <div id="section" class="container2">
         <div class="divimg">
             <img srcset="/assets/img/cerv/spaten350.webp">
         </div>
@@ -17,4 +16,4 @@
             <p>Basta inserir seu endereço para ver os produtos que estão disponíveis na sua região e aproveitar o maior delivery de bebidas geladas do Brasil.</p>
         </div>
     </div>
-</body>
+
