--- a/src/app/spaten600/spaten600.component.css
+++ b/src/app/spaten600/spaten600.component.css
@@ -1,5 +1,12 @@
+#section {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 .container {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     height: 500px;
 }
@@ -48,6 +55,12 @@ button {
 }
 
 @media screen and (max-width: 768px) {
+
+    #section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
  
     .container2 {
         display: flex;
@@ -66,11 +79,12 @@ button {
     }
 
     .divimg {
-        width: 400px;    
+        width: 200px;    
     }
 
     img {
         max-height: 200px;
+        max-width: 200px;
     }
 
     h1 {
