--- a/src/app/spaten269/spaten269.component.css
+++ b/src/app/spaten269/spaten269.component.css
@@ -1,3 +1,9 @@
+#section {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 .container {
     display: flex;
     justify-content: center;
@@ -48,6 +54,11 @@ button {
 }
 
 @media screen and (max-width: 768px) {
+    #section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
  
     .container2 {
         display: flex;
@@ -71,8 +82,8 @@ button {
 
     img {
         
-        max-width: 200px;
-        max-height: 200px;
+        max-width: 190px;
+        max-height: 190px;
     }
 
     h1 {
