--- a/src/app/spaten355/spaten355.component.css
+++ b/src/app/spaten355/spaten355.component.css
@@ -1,3 +1,8 @@
+#section {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
 .container {
     display: flex;
     justify-content: center;
@@ -48,6 +53,12 @@ button {
 }
 
 @media screen and (max-width: 768px) {
+
+    #section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
  
     .container2 {
         display: flex;
