--- a/src/app/spaten600/spaten600.component.html
+++ b/src/app/spaten600/spaten600.component.html
@@ -1,5 +1,5 @@
 <body>
-    <div class="container2">
+    <div id="section" class="container2">
         <div class="divimg">
             <img srcset="/assets/img/cerv/spaten600.webp">
         </div>
