--- a/src/app/spaten269/spaten269.component.css
+++ b/src/app/spaten269/spaten269.component.css
@@ -25,7 +25,7 @@
 }
 
 .divimg>img {
-    max-height: 400px;
+    height: 400px;
     max-width: auto;
 }
 
@@ -77,7 +77,8 @@ button {
     }
 
     .divimg {
-        width: 400px;    
+        width: 200px;
+        height: 200px;    
     }
 
     img {
